# JnVest

./: .env.example  .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/routers/: alerts.py  bot.py  buy_watch.py  calendar.py  market.py  options.py  orders.py  plaid.py  positions.py  snaptrade.py  stock.py  theme_watch.py  watchlist.py  worldcup.py
backend/app/services/: ai_analysis.py  alerts_runner.py  alpaca.py  apewisdom.py  blackscholes.py  cache.py  errors.py  finnhub.py  indicators.py  oddsapi.py  plaid_svc.py  snaptrade_svc.py  streamer.py  worldcup.py  yahoo.py
backend/app/services/bot/: __init__.py  backtest.py  contract.py  detector.py  monitor.py  runner.py  safety.py  sizing.py
backend/tests/: test_auth.py  test_blackscholes.py  test_bot_detector.py  test_bot_sizing.py  test_indicators.py  test_snaptrade_flatten.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AiWatch.tsx  AlertsPanel.tsx  BuyWatch.tsx  Calendar.tsx  CandlestickChart.tsx  CommandPalette.tsx  CustomOptionPanel.tsx  EquityCurve.tsx  ErBadge.tsx  ErrorBoundary.tsx  ExpirationRadar.tsx  GuestPortfolioView.tsx  Header.tsx  IndexChart.tsx  IndexTile.tsx  InsiderPanel.tsx  KeyEvents.tsx  Login.tsx  MacroTile.tsx  ManualPositions.tsx  MarketContext.tsx  MarketMovers.tsx  MarketNews.tsx  OptionPnLModal.tsx  (+24 more)
(+14 files in other folders)
