[project]
name = "jnvest-backend"
version = "0.1.0"
description = "JnVest — Daily Trading Dashboard backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "alpaca-py>=0.33",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=2.0",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "black>=24.10",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# B008: FastAPI's Depends() in defaults is the canonical pattern
# UP007/UP045: keep modern union syntax but allow Optional for SQLAlchemy mapped_column
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
